--- a/style.html
+++ b/style.html
@@ -63,3 +63,28 @@
     </footer>
 </body>
 </html>
+<!-- index.html -->
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>O Campo: A Cidade Colhendo Novas Oportunidades</title>
+    <link rel="stylesheet" href="estilo.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#oportunidades">Oportunidades</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section id="sobre">
+            <h1>O Campo: A Cidade Colhendo Novas Oportunidades</h1>
+            <p>Lorem
