--- a/style.html
+++ b/style.html
@@ -88,3 +88,14 @@
         <section id="sobre">
             <h1>O Campo: A Cidade Colhendo Novas Oportunidades</h1>
             <p>Lorem
+<!-- Botão padrão -->
+<button class="btn">Explorar</button>
+
+<!-- Botão primário -->
+<button class="btn btn-primary">Inscreva-se</button>
+
+<!-- Botão secundário -->
+<button class="btn btn-secondary">Saiba mais</button>
+
+<!-- Botão de contato -->
+<button class="btn btn-contact">Entre em contato</button>
