--- a/style.html
+++ b/style.html
@@ -99,3 +99,11 @@
 
 <!-- Botão de contato -->
 <button class="btn btn-contact">Entre em contato</button>
+<!-- Link padrão -->
+<a href="#" class="link">Saiba mais</a>
+
+<!-- Link primário -->
+<a href="#" class="link link-primary">Inscreva-se</a>
+
+<!-- Link secundário -->
+<a href="#" class="link link-secondary">Entre em contato</a>
