--- a/style.html
+++ b/style.html
@@ -107,3 +107,7 @@
 
 <!-- Link secundário -->
 <a href="#" class="link link-secondary">Entre em contato</a>
+<div class="campo-header">
+  <img src="campo-image.jpg" alt="Imagem do campo" class="campo-image">
+  <h1>O Campo: A Cidade Colhendo Novas Oportunidades</h1>
+</div>
